# DiffSynth-Studio

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: publish.yaml
diffsynth/: __init__.py  version.py
diffsynth/configs/: __init__.py  model_configs.py
diffsynth/core/: __init__.py
diffsynth/core/attention/: __init__.py  attention.py
diffsynth/core/device/: __init__.py  npu_compatible_device.py
diffsynth/core/gradient/: __init__.py
diffsynth/core/loader/: __init__.py  config.py  file.py  model.py
diffsynth/core/npu_patch/: npu_fused_operator.py
diffsynth/core/vram/: __init__.py  disk_map.py  initialization.py  layers.py
diffsynth/diffusion/: __init__.py  base_pipeline.py  flow_match.py  logger.py  loss.py  parsers.py  runner.py  training_module.py
diffsynth/pipelines/: AGENTS.md  flux2_image.py  flux_image.py  ltx2_audio_video.py  qwen_image.py  wan_video.py  z_image.py
diffsynth/utils/: AGENTS.md
diffsynth/utils/controlnet/: __init__.py  annotator.py
diffsynth/utils/data/: __init__.py
diffsynth/utils/lora/: __init__.py  flux.py  general.py  merge.py  reset_rank.py
diffsynth/utils/state_dict_converters/: flux_controlnet.py  flux_dit.py  flux_infiniteyou.py  flux_ipadapter.py  flux_vae.py  ltx2_dit.py  ltx2_video_vae.py  nexus_gen.py  nexus_gen_projector.py  step1x_connector.py  wan_video_animate_adapter.py  wan_video_dit.py  wan_video_image_encoder.py  wan_video_mot.py  wan_video_vace.py  wan_video_vae.py  z_image_text_encoder.py
diffsynth/utils/xfuser/: __init__.py  xdit_context_parallel.py
docs/en/: conf.py
docs/en/Research_Tutorial/: train_from_scratch.py
docs/zh/: conf.py
docs/zh/Research_Tutorial/: train_from_scratch.py
examples/dev_tools/: fix_path.py  unit_test.py
examples/flux/model_inference/: FLEX.2-preview.py  FLUX.1-Kontext-dev.py  FLUX.1-Krea-dev.py  FLUX.1-dev-AttriCtrl.py  FLUX.1-dev-Controlnet-Inpainting-Beta.py  FLUX.1-dev-Controlnet-Union-alpha.py  FLUX.1-dev-Controlnet-Upscaler.py  FLUX.1-dev-EliGen.py  FLUX.1-dev-IP-Adapter.py  FLUX.1-dev-InfiniteYou.py  FLUX.1-dev-LoRA-Encoder.py  FLUX.1-dev-LoRA-Fusion.py  FLUX.1-dev.py  Nexus-Gen-Editing.py  Nexus-Gen-Generation.py  Step1X-Edit.py
examples/flux/model_inference_low_vram/: FLEX.2-preview.py  FLUX.1-Kontext-dev.py  FLUX.1-Krea-dev.py  FLUX.1-dev-AttriCtrl.py  FLUX.1-dev-Controlnet-Inpainting-Beta.py  FLUX.1-dev-Controlnet-Union-alpha.py  FLUX.1-dev-Controlnet-Upscaler.py  FLUX.1-dev-EliGen.py  FLUX.1-dev-IP-Adapter.py  FLUX.1-dev-InfiniteYou.py  FLUX.1-dev-LoRA-Encoder.py  FLUX.1-dev-LoRA-Fusion.py  FLUX.1-dev.py  Nexus-Gen-Editing.py  (+2 more)
(+308 files in other folders)
